return cry face instead of smile face

--- a/pom.xml
+++ b/pom.xml
@@ -5,18 +5,18 @@
 	http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>sample</groupId>
+    <groupId>coach3</groupId>
     <artifactId>make-it-cry</artifactId>
     <name>make-it-cry</name>
 
     <packaging>war</packaging>
     <description>Just make it cry</description>
-    <version>1.0</version>
+    <version>1.1</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.9.RELEASE</version>
+        <version>1.5.8.RELEASE</version>
     </parent>
 
     <properties>
