--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
     <properties>
         <java.version>1.8</java.version>
     </properties>
+
+
     
     <dependencies>
 
@@ -61,4 +63,11 @@
             </plugin>
         </plugins>
     </build>
+    <distributionManagement>
+        <repository>
+            <id>central</id>
+            <name>c86c34775140-releases</name>
+            <url>http://internal-coach-devops.eastasia.cloudapp.azure.com:8083/artifactory/great-company</url>
+        </repository>
+    </distributionManagement>
 </project>
